# slurcount_bot

./: .gitignore  README.md  main.py  pre_push.py  pyproject.toml  slurs.py
